# empty-dummy-project

./: .env.example  .gitignore  README.md  docker-compose.yaml  init.sh  run.sh
files/git/: pre-commit
services/backend/: .env.example  .gitignore  Dockerfile  Pipfile  README.md  gunicorn.py  pyproject.toml  run_before.py  run_before.sh
services/backend/apps/: __init__.py
services/backend/apps/sphinx_docs/docs/: __init__.py  conf.py
services/backend/apps/sphinx_docs/docs/apps/: index.rst
services/backend/apps/testapp/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
services/backend/apps/testapp/management/: __init__.py
services/backend/apps/testapp/management/commands/: __init__.py  filling_models.py
services/backend/apps/testapp/migrations/: 0001_initial.py  0011_alter_comment_project.py
services/backend/apps/testapp/models/: __init__.py  comment.py  tag.py
services/backend/apps/testapp/serializers/: project.py
services/backend/docs/: conf.py  index.rst  sphinx_docs.rst  testapp.rst
services/backend/docs/apps/: index.rst
services/backend/docs/apps/sphinx_docs/: models.rst
services/backend/docs/apps/testapp/: index.rst  models.rst  views.rst
services/backend/settings/: asgi.py  settings.py  urls.py  wsgi.py
services/backend/tests/e2e/: __init__.py  conftest.py
services/backend/tests/integration/: conftest.py
services/fastapi/: Pipfile  pyproject.toml
services/fastapi/app/: __init__.py  main.py
services/fastapi/app/routers/: __init__.py  main.py  projects.py
services/fastapi/db/: models.py
(+91 files in other folders)
